--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.1.0",
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
