--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,15 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "ejs": "^3.1.9",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.13",
         "nodemon": "^3.1.0",
+        "otp-generator": "^4.0.1",
+        "otp-without-db": "^1.0.6",
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.1"
