--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18"
