--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "js-cookie": "^3.0.5",
     "next": "^14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
